--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "crawler-server",
   "version": "1.0.0",
-  "description": "News and blog crawler with raw JSON logs using Bun + Node.js style",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "bun server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "cheerio": "^1.0.0-rc.12"
-  },
-  "author": "Liemar",
-  "license": "MIT"
+    "cheerio": "^1.0.0-rc.12",
+    "express": "^4.18.2"
+  }
 }
