--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "crawler-server",
+  "name": "rss-crawler-server",
   "version": "1.0.0",
+  "description": "A fast RSS-based news crawler API built with Express and RSS Parser",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "rss-parser": "^3.13.0"
+  },
+  "keywords": [
+    "crawler",
+    "rss",
+    "news",
+    "seo",
+    "nodejs",
+    "api"
+  ],
+  "author": "Liemar",
+  "license": "MIT"
 }
