--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "rss-crawler-server",
+  "name": "rss-crawler-with-mercury",
   "version": "1.0.0",
-  "description": "A fast RSS-based news crawler API built with Express and RSS Parser",
+  "description": "A beefed-up RSS crawler using Mercury Parser to get full article content.",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@postlight/mercury-parser": "^2.2.0",
     "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
     "rss-parser": "^3.13.0"
   },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  },
   "keywords": [
-    "crawler",
     "rss",
+    "crawler",
     "news",
-    "seo",
-    "nodejs",
-    "api"
+    "mercury",
+    "parser",
+    "express"
   ],
   "author": "Liemar",
   "license": "MIT"
