--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "rss-crawler-with-mercury",
+  "name": "rss-crawler",
   "version": "1.0.0",
-  "description": "A beefed-up RSS crawler using Mercury Parser to get full article content.",
+  "description": "RSS crawler with deep parsing using @postlight/parser",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "@postlight/mercury-parser": "^2.2.0",
+    "@postlight/parser": "^2.2.2",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.12.0"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.3"
+  "engines": {
+    "node": ">=18"
   },
   "keywords": [
     "rss",
     "crawler",
-    "news",
-    "mercury",
-    "parser",
-    "express"
+    "mercury-parser",
+    "express",
+    "node-fetch"
   ],
   "author": "Liemar",
   "license": "MIT"
